pkg/ibmvpc/examples/out/explain_out/NACLGrouping_all_vpcs_explain_debug.txt
Explaining connectivity from 10.240.10.4 (vsi1-ky[10.240.10.4]) to 161.26.0.0/15 within test-vpc1-ky
====================================================================================================

Allowed connections from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/16: protocol: UDP

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16


Details:
~~~~~~~~
Egress:
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: outbound , src: 10.240.10.0/24 , dst: 161.26.0.0/16, conn: protocol: udp, srcPorts: 1-65535, dstPorts: 1-65535, action: allow

------------------------------------------------------------------------------------------------------------------------

No connectivity from vsi1-ky[10.240.10.4] to Public Internet 161.27.0.0/16;
connection blocked by egress

External traffic via PublicGateway: public-gw-ky
Egress: security group sg1-ky allows connection; network ACL acl1-ky blocks connection

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> |


Details:
~~~~~~~~
Egress:
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl1-ky blocks connection since there are no relevant allow rules

------------------------------------------------------------------------------------------------------------------------
